Bug 417166 - Internal Error Attempting SMB to Disconnected Computer
Summary: Internal Error Attempting SMB to Disconnected Computer
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Samba (other bugs)
Version First Reported In: 17.12.3
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-04 21:30 UTC by Kubuntu001
Modified: 2020-02-14 16:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.0
Sentry Crash Report:


Attachments
Screen capture of error message (43.66 KB, image/jpeg)
2020-02-04 21:30 UTC, Kubuntu001
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntu001 2020-02-04 21:30:17 UTC
Created attachment 125676 [details]
Screen capture of error message

SUMMARY
Inadvertently clicked the saved place which is to my son's computer. That computer was turned off at the time. Dolphin returned the error:

Internal Error
Please send a full bug report at http://bugs.kde.org
Unknown error condition in stat: No route to host

STEPS TO REPRODUCE
1. Have a smb place saved
2. Turn off / disconnect the place
3. Click the saved place

OBSERVED RESULT
Internal error message

EXPECTED RESULT
Something along the lines of "Resource unavailable. Is device connected?"

SOFTWARE/OS VERSIONS
Kubuntu 18.04.3 LTS with updates through 2.4.2020
Dolphin 17.12.3
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5 (built against 5.9.5)

ADDITIONAL INFORMATION
I don't know that it is truly an internal error. "Unknown error condition" seems true enough. System doesn't know the other machine is turned off which would seem to be an external error. "No route to host" seems correct.
Comment 1 Harald Sitter 2020-02-13 17:28:34 UTC
Technically context for KIO errors with possible causes is already available. I am not quite sure why dolphin chooses to not use them. In any event, we currently do not map the internal error, so I'm going to fix that. The actual error message will be just as vague though. This type of error can have a host of causes.
Comment 2 Harald Sitter 2020-02-14 16:03:11 UTC
Git commit a813d67cf6af0b252c8922d3551f0d1897c7b379 by Harald Sitter.
Committed on 14/02/2020 at 16:02.
Pushed by sitter into branch 'master'.

smb: map EHOSTUNREACH to ERR_CANNOT_CONNECT

Summary:
same as the ftp does. in fact, also steal the error message qtcpsocket
produces. effectively this makes smb://unavailableipaddress spit out
exactly the same error as ftp://unavailableipaddress

host unreachable being so vague, the pretty string continues to be vague
as well unfortunately.
FIXED-IN: 20.08.0

Test Plan: error upon accessing the unassigned address 192.168.1.99 is same between smb and ftp

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D27378

M  +5    -0    smb/kio_smb_browse.cpp

https://commits.kde.org/kio-extras/a813d67cf6af0b252c8922d3551f0d1897c7b379