smb: map EHOSTUNREACH to ERR_CANNOT_CONNECT

Summary:
same as the ftp does. in fact, also steal the error message qtcpsocket
produces. effectively this makes smb://unavailableipaddress spit out
exactly the same error as ftp://unavailableipaddress

host unreachable being so vague, the pretty string continues to be vague
as well unfortunately.

BUG: 417166
FIXED-IN: 20.08.0

Test Plan: error upon accessing the unassigned address 192.168.1.99 is same between smb and ftp

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D27378